# ESP32_Arduino_ESPIDF

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32  sdkconfig.esp32.old  sdkconfig.esp32dev  sdkconfig.esp32dev.old  sdkconfig.esp32p4  sdkconfig.esp32s3
boards/: dev-hosted.csv
src/: a2dp_source.cpp  a2dp_source.h  main.cpp
src/ota_littlefs/: CMakeLists.txt  ota_littlefs.c  ota_littlefs.h
src/ota_littlefs/slave_fw_bin/: .gitkeep  README.md
